--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: '${project.version}'
 main: com.tim.regions.Main
 api-version: '1.20'
 author: Tim
+depend: [WorldGuard]
 commands:
   cuboid:
     description: Create a cuboid region
